-*-outline-*-

                      NEWS for Python X Library

* In development

** Bug Fixes

- fix unclosed file in Xauth implementation
- fix support for `Window.set_wm_transient_for`
- fix support for `Drawable.put_image` / `Drawable.get_image`

** Misc

Improve response processing performance: reduce the number of `socket.recv`
calls needed to receive a full response.


* Version 0.19

** Bug Fixes

- don't throw an exception if $XAUTHFILE / ~/.Xauthority is missing
- fix authentication work-around for SSH forwarding under Python 3
- improve $DISPLAY handling: support optional protocol prefix, and
  correctly handle `unix:0.0` as `:0.0`


* Version 0.18

** Bug Fixes

- fix Python 3 buffer abstraction
- fix interrupted select handling for Python 3.3/3.4
- fix Unix socket support when only an abstract address is available


* Version 0.17

** Bug Fixes

- fix Xauth handling when using Python 2 and DISPLAY contains a remote IP
- fix String16 request field handling when using Python 3
- fix RECORD extension and example when using Python 3
- fix handling of properties: use byte strings for all X11 8-bits
  strings, as not all of them are text properties (the window
  getters/setters for wm_name, wm_icon_name, wm_class, and
  wm_client_machine still return/expect Unicode strings)

** API Changes

Core:

- new window getter/setter for text properties: get_full_text_property
  and change_text_property; with automatic conversion to/from Unicode
  when the property type encoding is supported (STRING and UTF8_STRING)

Composite extension:

- support for GetOverlayWindow request


* Version 0.16

** Licensing

The project is now licensed under the GNU Lesser General Public License
v2.1 or later (see the LICENSE file for details).

** Compatibility

Support for Python versions older than 2.7 has been dropped. Support for
Python 3 (3.3, 3.4 and 3.5) has been added. Note that Python-Xlib now
depends on the six package (>=1.10) for combined Python 2 / 3 support.
